# D4CMPP2

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  __main__.py  _main.py  cli.py  exceptions.py  grid_search.py  network_refer.yaml  optimize.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: AGENTS.md
_Data/: AGENTS.md
docker/: AGENTS.md  Dockerfile.cpu  Dockerfile.cuda128  Dockerfile.cuda130  README.md
examples/: AGENTS.md  README.md  custom_network.py
networks/: AFP_model.py  AFPwithSolv_model.py  AGENTS.md  DMPNN_model.py  DMPNNwithSolv_model.py  GAT_model.py  GATwithSolv_model.py  GCN_model.py  GCNwithSolv_model.py  GC_model.py  ISATPM_model.py  ISATPN_model.py  ISAT_model.py  MPNN_model.py  MPNNwithSolv_model.py  __init__.py  base.py  registry.py
src/: AGENTS.md  PostProcessor.py
tests/: AGENTS.md  README.md  benchmark_pyg_models.py  check_distribution_artifacts.py  ci_artifact_checks.sh  ci_static_checks.sh  fixtures.py  markers.py  test_cli_packaging.py  test_config_validation.py  test_csv_data_manager_validation.py  test_csv_validation.py  test_custom_network.py  test_data_fixture.py  test_docker_contract.py  test_example_model_compatibility.py  test_examples_syntax.py  test_failure_behavior.py  test_failure_contracts.py  test_gcn_end_to_end.py  test_graph_alignment.py  test_heavy_smoke.py  test_network_abc.py  test_network_persistence.py  test_optimize.py  test_path_utils.py  test_public_contracts.py  test_pyg_data_contract.py  test_pyg_dmpnn_afp.py  test_pyg_gcn.py  (+27 more)
(+112 files in other folders)
