[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "D4CMPP2"
version = "0.4.0"
description = "PyTorch Geometric molecular property prediction models"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "torch>=2.2,<3",
  "torch-geometric>=2.8,<3",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "tqdm>=4.65",
  "prettytable>=3.9",
  "rdkit>=2023.9",
  "scikit-learn>=1.3",
  "Pillow>=10",
  "PyYAML>=6",
  "MoleculeSculptor>=1.0.1,<2",
]

[project.optional-dependencies]
notebook = ["jupyterlab>=4", "ipywidgets>=8"]

[project.scripts]
d4cmpp2 = "D4CMPP2.src.api.command:main"

[tool.setuptools]
packages = [
  "D4CMPP2",
  "D4CMPP2.networks",
  "D4CMPP2.networks.src",
  "D4CMPP2.src",
  "D4CMPP2.src.api",
  "D4CMPP2.src.Analyzer",
  "D4CMPP2.src.DataManager",
  "D4CMPP2.src.DataManager.Dataset",
  "D4CMPP2.src.DataManager.GraphGenerator",
  "D4CMPP2.src.NetworkManager",
  "D4CMPP2.src.TrainManager",
  "D4CMPP2.src.utils",
  "D4CMPP2._Data",
]
package-dir = {D4CMPP2 = "."}
include-package-data = true

[tool.setuptools.package-data]
D4CMPP2 = ["network_refer.yaml", "src/utils/functional_group.csv", "_Data/*.csv", "_Data/*.md"]
